--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goodbye</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Goodbye{% endblock %}
+
+{% block content %}
     <h1>Thank you for using our services. Goodbye!</h1>
-    <a href="{{ url_for('index') }}">Go back to home page</a>
-</body>
-</html>
+    <a href="{{ url_for('index') }}"><button>Go back to home page</button></a>
+{% endblock %}
