--- a/templates/current_account.html
+++ b/templates/current_account.html
@@ -1,32 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Current Account</title>
-</head>
-<body>
-	<h1>Current Account</h1>
+{% extends 'base.html' %}
 
-	<form method="POST" autocomplete="off">
-    	<label for="account_number">Account Number:</label><br>
-    	<input type="text" id="account_number" name="account_number" required><br>
-    	<label for="balance">Initial Balance:</label><br>
-    	<input type="number" id="balance" name="balance" required><br><br>
-    	<label for="password">Password:</label><br>
-    	<input type="password" id="password" name="password" required><br><br>
-    	<button type="submit">Create Account</button>
-	</form>
+{% block title %}Current Account{% endblock %}
 
-	{% if acc_num %}
-    	<h2>Account Number: {{ acc_num }}</h2>
-    	<h3>Balance: {{ balance }} BGN</h3>
-	{% endif %}
+{% block content %}
+    <h1>Current Account</h1>
 
-	<form action="{{ url_for('index') }}" method="get">
-    	<button type="submit">Back to Main Menu</button>
-	</form>
+    <form method="POST" autocomplete="off">
+        <label for="account_number">Account Number:</label><br>
+        <input type="text" id="account_number" name="account_number" required><br>
 
-</body>
-</html>
+        <label for="balance">Initial Balance:</label><br>
+        <input type="number" id="balance" name="balance" required><br><br>
 
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required><br><br>
+
+        <button type="submit">Create Account</button>
+    </form>
+
+    {% if acc_num %}
+        <h2>Account Number: {{ acc_num }}</h2>
+        <h3>Balance: {{ balance }} BGN</h3>
+    {% endif %}
+
+    <form action="{{ url_for('index') }}" method="get">
+        <button type="submit">Back to Main Menu</button>
+    </form>
+{% endblock %}
