--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
             background-color: #333;
             padding: 10px 20px;
             display: flex;
+            border-radius: 12px;
             justify-content: space-between;
             align-items: center;
         }
@@ -51,7 +52,7 @@
             padding: 20px;
         }
         .exit-nav-button {
-            background-color: darkred;
+            background-color: #dc3545;
             color: white;
             border: none;
             font-size: 14px;
@@ -61,7 +62,45 @@
         }
 
         .exit-nav-button:hover {
-            color: darkred;
+            background-color: #c82333;
+        }
+        body {
+            background: linear-gradient(to right, #141E30, #243B55);
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+        label {
+            background: linear-gradient(to right, #a8c0ff, #d9e4ff);
+            padding: 5px;
+            border-radius: 5px;
+            color: #333;
+            display: inline-block;
+        }
+        .secondary-button {
+            background: linear-gradient(to right, #a8c0ff, #d9e4ff);
+            color: black;
+            width: auto;
+            padding: 10px 20px;
+            margin-bottom: 20px;
+            margin-top: 20px;
+            border-radius: 25px; /* Oval edges */
+            display: inline-block;
+            text-align: center;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .secondary-button:hover {
+            background-color: #5a6268;
+        }
+        .account-summary {
+            background: linear-gradient(to right, #a8c0ff, #d9e4ff);
+            color: black;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            margin: 20px auto;
+            text-align: center;
         }
     </style>
 </head>
