--- a/templates/view_accounts.html
+++ b/templates/view_accounts.html
@@ -35,22 +35,25 @@
 
     <style>
         .form-container {
-            background-color: #f9f9f9;
+            background-color: white;
+            color: black;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             max-width: 400px;
-            margin: auto;
+            margin: 20px auto;
+            text-align: center;
         }
 
         label {
             font-weight: bold;
             display: block;
             margin: 10px 0 5px;
+            width: 97.5%;
         }
 
         input {
-            width: 100%;
+            width: 95.5%;
             padding: 8px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
