Fixing main menu bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,9 +40,9 @@
         .breadcrumb a:hover {
             text-decoration: underline;
         }
-
-        /* Centered content styling */
         body {
+            background: linear-gradient(to right, #141E30, #243B55) !important;
+            color: white;
             font-family: Arial, sans-serif;
             text-align: center;
         }
@@ -63,11 +63,6 @@
 
         .exit-nav-button:hover {
             background-color: #c82333;
-        }
-        body {
-            background: linear-gradient(to right, #141E30, #243B55);
-            color: white;
-            font-family: Arial, sans-serif;
         }
         label {
             background: linear-gradient(to right, #a8c0ff, #d9e4ff);
@@ -101,7 +96,7 @@
             max-width: 400px;
             margin: 20px auto;
             text-align: center;
-        }   
+        }
     </style>
 </head>
 <body>
