--- a/templates/account_manager.html
+++ b/templates/account_manager.html
@@ -3,47 +3,67 @@
 {% block title %}Account manager{% endblock %}
 
 {% block content %}
-    <div class="sidebar" id="sidebar">
-        <ul class="menu">
-            <li>
-                <a href="{{ url_for('savings_account') }}" class="{% if active_page == 'savings' %}active{% endif %}">
-                    Savings Account
-                </a>
-            </li>
-            <li>
-                <a href="{{ url_for('current_account') }}" class="{% if active_page == 'current' %}active{% endif %}">
-                    Current Account
-                </a>
-            </li>
-        </ul>
-        <button id="toggleSidebar" class="toggle-button">&#x25C0;</button>
+    <div class="layout">
+        <div class="sidebar" id="sidebar">
+            <ul class="menu">
+                <li>
+                    <a href="{{ url_for('current_account') }}" class="{% if active_page == 'current' %}active{% endif %}">
+                        Current Account
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ url_for('savings_account') }}" class="{% if active_page == 'savings' %}active{% endif %}">
+                        Savings Account
+                    </a>
+                </li>
+            </ul>
+            <button id="toggleSidebar" class="toggle-button">&#x25C0;</button>
+        </div>
+        <div class="dinamic-content">
+            {% block inner_content %}{% endblock %}
+        </div>
     </div>
 
     <style>
+        .layout {
+            display: flex;
+            width: 100vw;
+            height: 100vh;
+        }
+        .dinamic-content {
+            position: absolute;
+            top: 0;
+            right: 0;
+            display: flex;
+            width: 100%;
+            height: 100vh;
+            justify-content: center;
+            align-items: center;
+        }
         .sidebar {
             width: 220px;
             height: 100vh;
             background-color: #2c2c2c;
-            padding-top: 40px;
-            position: fixed;
+            position: relative;
             transition: width 0.3s ease;
-            overflow: hidden;
+            z-index: 999;
         }
 
         .sidebar.collapsed {
             width: 24px;
         }
 
+        ul {
+            gap: 6px;
+        }
+
         .menu {
             list-style-type: none;
             padding: 0;
-            margin: 0;
+            margin: 20px 0;
             display: flex;
             flex-direction: column;
-        }
-
-        .menu li {
-            margin-bottom: 10px;
+            overflow: hidden;
         }
 
         .menu a {
@@ -55,16 +75,17 @@
             border-left: 4px solid transparent;
             white-space: nowrap;
             overflow: hidden;
+            transition: .3s ease-in-out;
         }
 
         .menu a:hover {
             background-color: #444;
-            border-left: 4px solid #00BFFF;
+            border-left: 4px solid #8DBCC7;
         }
 
         .menu a.active {
-            background-color: #00BFFF;
-            color: #000;
+            background-color: #8DBCC7;
+            color: #333;
             font-weight: bold;
             border-left: 4px solid #ffffff;
         }
@@ -76,7 +97,7 @@
             width: 30px;
             height: 30px;
             border-radius: 50%;
-            background-color: #00BFFF;
+            background-color: #8DBCC7;
             border: none;
             color: white;
             font-size: 14px;
@@ -84,7 +105,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            z-index: -1;
+            z-index: 10;
             transition: transform 0.3s;
         }
 
